<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">Pulse</string>
    <string name="app_name_long">Pulse (SMS/Tablet Messenger)</string>
    <string name="app_title">Pulse</string>
    <string name="shortcut_compose_short">New Message</string>
    <string name="shortcut_compose_long">Start a new conversation!</string>
    <string name="menu_conversations">Conversation list</string>
    <string name="menu_archived_conversations">Archived conversations</string>
    <string name="menu_private_conversations">Private conversations</string>
    <string name="menu_unread_conversations">Unread conversations</string>
    <string name="menu_edit_folders">Manage folders…</string>
    <string name="menu_edit_folders_no_ellipse">Manage Folders</string>
    <string name="menu_schedule">Scheduled messages</string>
    <string name="menu_mute_contacts">Blacklist</string>
    <string name="menu_invite">Invite friends</string>
    <string name="menu_feature_settings">Advanced Features</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_customization_settings">Settings</string>
    <string name="menu_mms_configuration">MMS Configuration</string>
    <string name="menu_open_source_experiments">Open Source Experiments</string>
    <string name="menu_account">My account</string>
    <string name="menu_device_texting">Text from any device</string>
    <string name="menu_help">Help &amp; feedback</string>
    <string name="menu_about">About</string>
    <string name="menu_search">Search</string>
    <string name="menu_mobile_only">Mobile Only</string>
    <string name="menu_snooze">Snooze notifications</string>
    <string name="menu_call">Call contact</string>
    <string name="menu_video_call">Video call with Duo</string>
    <string name="menu_show_bubble">Pop-out to Bubble</string>
    <string name="menu_view_contact">View contact</string>
    <string name="menu_view_contacts">View contacts</string>
    <string name="menu_view_media">View media</string>
    <string name="menu_delete_conversation">Delete conversation</string>
    <string name="menu_archive_conversation">Archive conversation</string>
    <string name="menu_move_to_inbox">Move to inbox</string>
    <string name="menu_conversation_information">Conversation information</string>
    <string name="menu_search_conversation">Search conversation</string>
    <string name="menu_copy_phone_number">Copy number</string>
    <string name="menu_view_full_conversation">View History</string>
    <string name="menu_conversation_blacklist">Blacklist contact</string>
    <string name="menu_conversation_blacklist_all">Blacklist all participants</string>
    <string name="menu_conversation_schedule">Schedule a message</string>
    <string name="menu_contact_settings">Conversation settings</string>
    <string name="menu_group_settings">Group settings</string>
    <string name="menu_snooze_off">Off</string>
    <string name="menu_snooze_1">1 hour</string>
    <string name="menu_snooze_2">2 hours</string>
    <string name="menu_snooze_4">4 hours</string>
    <string name="menu_snooze_8">8 hours</string>
    <string name="menu_snooze_24">24 hours</string>
    <string name="menu_snooze_72">72 hours</string>
    <string name="menu_snooze_custom">Pick a time</string>
    <string name="menu_mark_as_unread">Mark as Unread</string>
    <string name="menu_pin_conversation">Pin/Unpin Conversation</string>
    <string name="menu_mute_conversation">Mute/Unmute Conversation</string>
    <string name="no_messages">No messages</string>
    <string name="no_messages_summary">Start a new conversation or just enjoy your day!</string>
    <string name="close">Close</string>
    <string name="pinned">Pinned</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="last_week">This week</string>
    <string name="last_month">This month</string>
    <string name="older">Older</string>
    <string name="mark_section_as_read">Mark all %1$s as read</string>
    <string name="marking_section_as_read">Marking all %1$s as read</string>
    <plurals name="conversations_deleted">
        <item quantity="one">%1$d conversation deleted</item>
        <item quantity="other">%1$d conversations deleted</item>
    </plurals>
    <plurals name="conversations_archived">
        <item quantity="one">%1$d conversation archived</item>
        <item quantity="other">%1$d conversations archived</item>
    </plurals>
    <plurals name="conversations_unarchived">
        <item quantity="one">%1$d conversation moved to inbox</item>
        <item quantity="other">%1$d conversations moved to inbox</item>
    </plurals>
    <string name="undo">Undo</string>
    <string name="enter_search">Search for…</string>
    <string name="text_anywhere_description">Did you know: Pulse is way more than just a phone app.
        You can use Pulse to text from <b>any</b> device!</string>
    <string name="convo_list_try_it">Try it!</string>
    <string name="convo_list_not_now">Not now</string>
    <string name="no_private_messages_description">Set up private conversations from their settings menu!</string>
    <string name="no_folder_messages_description">Add a conversation to this folder for it to show up, here!</string>
    <string name="no_archived_messages_description">Archive a conversation for it to show up, here!</string>
    <string name="conversations">Conversations</string>
    <string name="messages">Messages</string>
    <string name="invite_friends_title">Love Pulse?</string>
    <string name="invite_friends_summary">So do we and so will others! We\'re trying to get it in
        as many hands as we can to continue making it the best product that it can be and by
        inviting your friends to try, you\'re helping with this! \n\nSelect the friends below that
        you\'d like to send the app to and it will send them an SMS with a short description and
        a link to download!</string>
    <string name="invite_friends_sms">I started using a new texting app and I think
        you\'ll like it! Plus it\'s free, so might as well download it:
        http://messenger.klinkerapps.com</string>
    <string name="type_message">Type message</string>
    <string name="type_message_to">Type message to %1$s</string>
    <string name="attach">Attach</string>
    <string name="select_sim">Select SIM</string>
    <string name="view_scheduled_messages">View scheduled messages for conversation</string>
    <string name="message_from">%1$s</string>
    <string name="message_from_bullet">%1$s  •</string>
    <string name="mms_image">MMS Image</string>
    <string name="now">Now</string>
    <string name="sending">Sending…</string>
    <string name="failed">Failed</string>
    <string name="delivered">Message delivered</string>
    <string name="attach_image">Attach Image</string>
    <string name="capture_image">Capture Image</string>
    <string name="attach_gif">Attach GIF</string>
    <string name="attach_sticker">Attach Sticker</string>
    <string name="record_video">Record Video</string>
    <string name="record_audio">Record Audio</string>
    <string name="attach_location">Attach Location</string>
    <string name="attach_contact">Attach Contact</string>
    <string name="attach_contact_summary">Select or enter a contact to attach to the message!</string>
    <string name="apply_template">Apply Template</string>
    <string name="no_location_found">Could not find your location.</string>
    <string name="camera_permission_needed">The camera permission needs to be granted to take
        pictures!</string>
    <string name="take_picture">Snap Picture</string>
    <string name="flip_picture">Flip Camera</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="attached_image">Attached Image</string>
    <string name="remove_image">Remove Attached Image</string>
    <string name="remove_image_short">Remove Image</string>
    <string name="edit_image">Edit Attached Image</string>
    <string name="edit_recipients">Edit Recipients</string>
    <string name="select_folder">Select Folder for Conversation</string>
    <string name="permission_needed_for_action">Permissions needed for this action.</string>
    <string name="request_permission">Request Permission</string>
    <string name="no_messages_with_contact">You don\'t have any messages in this conversation yet,
        time to start it up!</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="share_content">Share content…</string>
    <string name="saved">The file has been saved!</string>
    <string name="failed_to_save">Failed to save</string>
    <string name="start_recording_audio">Press the button to start recording audio!</string>
    <string name="audio_recording_error">Error with recording :(</string>
    <string name="message_copied_to_clipboard">Copied to clipboard</string>
    <string name="view_details">View Details</string>
    <string name="speak_message">Speak Message Aloud</string>
    <string name="select_all_messages">Select All Messages</string>
    <string name="select_all_conversations">Select All Conversations</string>
    <string name="delete">Delete</string>
    <string name="copy_message">Copy Text</string>
    <string name="resend">Resend</string>
    <string name="no_media">No media in this conversation!</string>
    <string name="error_decrypting">Error running decryption! Please view this message on your phone.</string>
    <string name="message_sending_failed">Failed to send message!</string>
    <string name="preparing_video">Preparing video&#8230;</string>
    <string name="delete_message">Delete this message?</string>
    <string name="forward_message">Forward Message</string>
    <string name="share_message">Share Message</string>
    <string name="copy_message_text">Copy Message Text</string>
    <string name="select_text_to_copy">Select the text you want to copy:</string>
    <string name="copy_all_text">Copy All</string>
    <string name="copy_otp">Copy</string>
    <string name="open_link_to_browser">Open Link to Browser</string>
    <string name="open_link_internal">Open Link Internally</string>
    <string name="copy_link">Copy Link</string>
    <string name="attach_vcard">Attach Contact as vCard</string>
    <string name="attach_plain_text">Attach Contact as Plain Text</string>
    <string name="send_as_scheduled_message_question">Would you like to schedule this message for later?</string>
    <string name="send_as_scheduled_message">Send as scheduled message</string>
    <string name="send_without_signature">Send without signature</string>
    <string name="send_without_delay">Send without delay</string>
    <string name="send">Send</string>
    <string name="billed_immediately">This is billed immediately.</string>
    <string name="lifetime_purchase">US$10.99 - Lifetime Membership</string>
    <string name="lifetime_purchase_summary">Pay once, and never again!</string>
    <string name="subscription_purchase_description">Low price, easy to love!</string>
    <string name="subscription_purchase_summary">Comes with a 7 day trial.</string>
    <string name="yearly_purchase_2">$5.99 - Yearly Subscription</string>
    <string name="have_an_account">Have an account?\nSign in</string>
    <string name="competition_cant_beat"><b>Take 7 days FREE</b> to find out for yourself why no one can touch our <b>speed, pricing, or service</b>.</string>
    <string name="select_a_subscription_below">Select one of the two subscriptions to start your <b>free trial</b>. You can upgrade or cancel at any time!</string>
    <string name="monthly_purchase_improved">US$0.99\n/month</string>
    <string name="three_month_purchase_improved">US$1.99\n/3 month</string>
    <string name="yearly_purchase_improved">US$5.99\n/year</string>
</resources>