<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/menu_delete_conversation"
        android:title="@string/menu_delete_conversation"
        android:icon="@drawable/ic_delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_archive_conversation"
        android:title="@string/menu_archive_conversation"
        android:icon="@drawable/ic_archive"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_pin_conversation"
        android:title="@string/menu_pin_conversation"
        android:icon="@drawable/ic_pin"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_mute_conversation"
        android:title="@string/menu_mute_conversation"
        android:icon="@drawable/ic_mute"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_mark_as_unread"
        android:title="@string/menu_mark_as_unread"
        android:icon="@drawable/ic_unread"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_conversations_select_all"
        android:title="@string/select_all_conversations"
        app:showAsAction="never" />

</menu>