<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2020 Luke Klinker
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_account"
            android:icon="@drawable/ic_devices"
            android:orderInCategory="0"
            android:title="@string/menu_account" />

    </group>

    <group android:checkableBehavior="single">

        <group
            android:id="@+id/primary_section"
            android:checkableBehavior="single">

            <item
                android:id="@+id/drawer_conversation"
                android:checked="true"
                android:icon="@drawable/ic_inbox_small"
                android:orderInCategory="1"
                android:title="@string/menu_conversations" />

            <item
                android:id="@+id/drawer_unread"
                android:icon="@drawable/ic_unread"
                android:orderInCategory="1"
                android:title="@string/menu_unread_conversations" />

            <item
                android:id="@+id/drawer_private"
                android:icon="@drawable/ic_lock"
                android:orderInCategory="1"
                android:title="@string/menu_private_conversations" />

            <item
                android:id="@+id/drawer_archived"
                android:icon="@drawable/ic_archive"
                android:orderInCategory="1"
                android:title="@string/menu_archived_conversations" />

        </group>

        <group
            android:id="@+id/features_section"
            android:checkableBehavior="single">

            <item
                android:id="@+id/drawer_schedule"
                android:icon="@drawable/ic_schedule"
                android:orderInCategory="2"
                android:title="@string/menu_schedule" />

            <item
                android:id="@+id/drawer_mute_contacts"
                android:icon="@drawable/ic_block"
                android:orderInCategory="2"
                android:title="@string/menu_mute_contacts" />

            <item
                android:id="@+id/drawer_invite"
                android:icon="@drawable/ic_invite"
                android:orderInCategory="2"
                android:title="@string/menu_invite" />

        </group>

        <group
            android:id="@+id/other_section"
            android:checkableBehavior="single">

            <item
                android:id="@+id/drawer_feature_settings"
                android:icon="@drawable/ic_feature_settings"
                android:orderInCategory="3"
                android:title="@string/menu_feature_settings" />

            <item
                android:id="@+id/drawer_settings"
                android:icon="@drawable/ic_settings"
                android:orderInCategory="3"
                android:title="@string/menu_settings" />

            <item
                android:id="@+id/drawer_help"
                android:icon="@drawable/ic_help"
                android:orderInCategory="3"
                android:title="@string/menu_help" />

            <item
                android:id="@+id/drawer_about"
                android:icon="@drawable/ic_about"
                android:orderInCategory="3"
                android:title="@string/menu_about" />

        </group>

    </group>

</menu>