<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/drawerBackground"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:id="@+id/contact_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="7"
        android:textColor="@color/primaryText"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/send_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="?selectableItemBackground"
        android:textColor="@color/secondaryText"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/type_message"
        android:maxLines="10" />

    <Spinner
        android:id="@+id/repeat_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:text="@string/send"
            tools:ignore="ButtonStyle" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:text="@string/delete"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:text="@string/save"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>