<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/purchase_layout"
    android:layout_width="316dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/api_login_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:visibility="invisible"
    tools:ignore="Overdraw">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/competition_cant_beat"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/select_a_subscription_below"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/drawerBackground"
        android:orientation="vertical" >

        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/monthly"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple_borderless"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="6dp"
                android:paddingTop="6dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginBottom="6dp"
                    android:src="@drawable/ic_payment_monthly"
                    android:tint="@color/primaryText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/monthly_purchase_improved"
                    android:textColor="@color/primaryText"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/three_month"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple_borderless"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="6dp"
                android:paddingTop="6dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginBottom="6dp"
                    android:src="@drawable/ic_payment_three_month"
                    android:tint="@color/primaryText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/three_month_purchase_improved"
                    android:textColor="@color/primaryText"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/yearly"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple_borderless"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="6dp"
                android:paddingTop="6dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginBottom="6dp"
                    android:src="@drawable/ic_payment_yearly"
                    android:tint="@color/primaryText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/yearly_purchase_improved"
                    android:textColor="@color/primaryText"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/subscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/pulse_ripple"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="16dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="16dp">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:padding="9dp"
                android:src="@drawable/ic_payment_yearly"
                android:tint="@color/primaryText" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/yearly_purchase_2"
                    android:textColor="@color/primaryText"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/subscription_purchase_description"
                    android:textColor="@color/primaryText"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/subscription_purchase_summary"
                    android:textColor="@color/primaryText"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lifetime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/pulse_ripple"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="16dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="16dp">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:padding="9dp"
                android:src="@drawable/ic_reward"
                android:tint="@color/primaryText" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/lifetime_purchase"
                    android:textColor="@color/primaryText"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lifetime_purchase_summary"
                    android:textColor="@color/primaryText"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/billed_immediately"
                    android:textColor="@color/primaryText"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/drawerBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingBottom="6dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="6dp"
            android:layout_height="6dp"
            android:alpha=".6"
            android:src="@color/primaryText"
            app:civ_border_width="0dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="9dp"
            android:layout_height="9dp"
            android:layout_marginStart="8dp"
            android:src="@color/primaryText"
            app:civ_border_width="0dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/pulse_ripple"
            android:padding="12dp"
            android:text="@string/have_an_account"
            android:textColor="@color/secondaryText"
            android:fontFamily="sans-serif-light"
            android:gravity="end"
            android:layout_marginEnd="6dp"
            android:paddingEnd="10dp"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>